# chogori-platform

./: .gitignore  CMakeLists.txt  HOTIndexer.h  MapIndexer.h  init.sh  install_deps.sh  setup.sh
cluster/: locals.py  run.py  run_tpcc.sh  state.p  test_cluster_ops.sh  test_cluster_ops_server_num.sh  test_key_space.sh  test_ops.sh
cluster/configs/: cluster.cfg  cpo.cfg  k2_server.cfg  k2_server2.cfg  nodepool.cfg  persist.cfg  test_write_async.cfg  tpcc_client.cfg  tpcc_load.cfg  tso.cfg  txnbench.cfg  txnload.cfg  ycsb_client.cfg  ycsb_load.cfg
docker/: Dockerfile  README.md
graph-client/: CMakeLists.txt  clientV6.cpp
graph-client/gen-cpp/: MetaService.cpp  MetaService.h  clientV6.cpp  skvGraphV6_types.cpp  skvGraphV6_types.h
include/: CMakeLists.txt  log.h
include/hot/: CMakeLists.txt
include/hot/commons/: CMakeLists.txt
include/hot/commons/include/hot/commons/: Algorithms.hpp  BiNode.hpp  BiNodeInformation.hpp  BiNodeInterface.hpp  BitMask32.hpp  DiscriminativeBit.hpp  EntriesRange.hpp  InsertInformation.hpp  MultiMaskPartialKeyMapping.hpp  MultiMaskPartialKeyMappingInterface.hpp  NodeAllocationInformation.hpp  NodeAllocationInformations.hpp  NodeMergeInformation.hpp  NodeParametersMapping.hpp  NodeType.hpp  PartialKeyConversionInformation.hpp  PartialKeyMappingBase.hpp  PartialKeyMappingHelpers.hpp  SIMDHelper.hpp  SearchResultForInsert.hpp  SingleMaskPartialKeyMapping.hpp  SingleMaskPartialKeyMappingInterface.hpp  SparsePartialKeys.hpp  TwoEntriesNode.hpp
include/hot/content-helpers/: CMakeLists.txt
include/hot/content-helpers/include/idx/contenthelpers/: CStringComparator.hpp  ContentEquals.hpp  IdentityKeyExtractor.hpp  KeyComparator.hpp  KeyUtilities.hpp  OptionalValue.hpp  PairKeyExtractor.hpp  PairPointerKeyExtractor.hpp  TidConverters.hpp  ValueToKeyTypeMapper.hpp
include/hot/rowex/: CMakeLists.txt
include/hot/single-threaded/: CMakeLists.txt
include/hot/single-threaded/include/hot/singlethreaded/: HOTSingleThreaded.hpp  HOTSingleThreadedChildPointer.hpp  HOTSingleThreadedChildPointerInterface.hpp  HOTSingleThreadedDeletionInformation.hpp  HOTSingleThreadedInsertStackEntry.hpp  HOTSingleThreadedInterface.hpp  HOTSingleThreadedIterator.hpp  HOTSingleThreadedNode.hpp  HOTSingleThreadedNodeBase.hpp  HOTSingleThreadedNodeBaseInterface.hpp  HOTSingleThreadedNodeInterface.hpp  MemoryPool.hpp
pbrb/: .gitignore  PbrbAlgo.cpp  indexer.cpp  indexer.hpp  makefile  pbrb_design.cpp  pbrb_design.h  pbrb_design.hpp  plog.h  plog.hpp  schema.cpp  schema.h  schema.hpp  test.cpp
pbrb/doc/: problem.md
src/k2/: CMakeLists.txt
src/k2/appbase/: AppEssentials.h
src/k2/assignmentManager/: CMakeLists.txt
src/k2/cmd/demo/: rpc_echo.cpp
src/k2/cmd/nodepool/: CMakeLists.txt  nodepool_main.cpp
src/k2/cmd/tpcc/: datagen.h  dataload.h  schema.h  tpcc_client.cpp  transactions.h  verify.cpp  verify.h
src/k2/cmd/txbench/: CMakeLists.txt  k23sibench_client.cpp  rpcbench_client.cpp  rpcbench_server.cpp  txbench_client.cpp  txbench_combine.cpp
src/k2/cmd/ycsb/: transactions.h  ycsb_client.cpp
src/k2/common/: Common.h  Log.h
src/k2/cpo/service/: CPOService.cpp
src/k2/dto/: K23SI.h  K23SIInspect.h  MessageVerbs.h  SKVRecord.cpp  SKVRecord.h
src/k2/indexer/: CMakeLists.txt  HOTIndexer.h  IndexerInterface.cpp  IndexerInterface.h  MapIndexer.h  log.h
src/k2/module/k23si/: CMakeLists.txt  Config.h  InstancePlog.cpp  InstancePlog.h  Module.cpp  Module.h  Persistence.cpp  Persistence.h  ReadCache.h  TxnManager.cpp  TxnManager.h  TxnWIMetaManager.cpp  TxnWIMetaManager.h
src/k2/module/k23si/client/: CMakeLists.txt  k23si_client.cpp  (+1 more)
src/k2/pbrb/: CMakeLists.txt  Transport.cpp  indexer.cpp  indexer.h  pbrb_design.cpp  pbrb_design.h  plog.h  schema.cpp  schema.h
src/k2/pmemStorage/: CMakeLists.txt  PmemAllocator.h  PmemEngine.cpp  PmemEngine.h  PmemEngineInterface.h  PmemLog.cpp  PmemLog.h  pmemLog.cpp
src/k2/transport/: Payload.h  PayloadFileUtil.cpp  RPCDispatcher.cpp  RPCDispatcher.h  Request.cpp  Status.cpp  TCPRPCChannel.h  TCPRPCProtocol.cpp
src/k2/tso/service/: TSOService.cpp  TSOWorker.cpp
test/: CMakeLists.txt  createTag.cpp  skvGraphV6.thrift
test/graph/: CMakeLists.txt  skvGraphV3.thrift  skvGraphV6.thrift
test/graph/gen-cpp/: CreateSpace.cpp  CreateTag.cpp  MetaService.cpp  MetaService.h  MetaService_server.skeleton.cpp  k2_client.cpp  k2_client.h  k2_seastar_app.cpp  k2_seastar_app.h  queue_defs.h  skvGraphV6_types.cpp  skvGraphV6_types.h
test/integration/: stop_local_plog.sh  stop_pmem_engine.sh  test_collection.sh  test_k23si.sh  test_k23si_tpcc.sh  test_k23si_ycsb.sh  test_local_plog.sh  test_ops.sh  test_pmem_engine.sh  test_query.sh  test_skv_client.sh  test_space_thrift.sh  test_tag_create.sh  test_write_async.sh
test/k23si/: 3SITxnTest.cpp  CMakeLists.txt  HOTTest.cpp  IndexerTest.cpp  K23SITest.cpp  KVNodeTest.cpp  WriteAsyncTest.cpp
test/pbrb/: CMakeLists.txt  PbrbTest.cpp  PbrbTest2.cpp  PbrbTest3.cpp
test/plog/: CMakeLists.txt
test/pmemStorage/: CMakeLists.txt  PmemLogBench.cpp  PmemLogTest.cpp  PmemPayloadTest.cpp  TPCCRawDataGenerator.h  TPCCRawDataSchema.h
test/skvGraph/: CMakeLists.txt
test/skvGraph/gen-cpp/: MetaService.cpp  MetaService.h  SKVClientTest.cpp  SkvGraphV2_types.cpp  SkvGraphV2_types.h
test/skvGraphV2/: CMakeLists.txt  testv2.thrift
test/skvGraphV2/gen-cpp/: Graph.cpp  Graph.h  Graph_server.skeleton.cpp  testv2_types.h
test/skvGraphV3/: CMakeLists.txt  CreateSpace.cpp  CreateSpace_v3.cpp  MetaService_server.skeleton.cpp  getSpace.thrift  skvGraphV2.thrift
test/skvGraphV3/gen-cpp/: CreateSpace.cpp  CreateSpace_old.cpp  CreateSpace——old.cpp  MetaService.cpp  MetaService.h  skvGraphV2_types.cpp  skvGraphV2_types.h
test/skvGraphV4/: CMakeLists.txt
test/skvGraphV4/gen-cpp/: CreateSpace.cpp  MetaService.cpp  MetaService.h  skvGraphV3_types.cpp  skvGraphV3_types.h
test/skvGraphV5/: CMakeLists.txt  MetaService_server.skeleton.cpp  myschematest.cpp  skvGraphV5.thrift
test/skvGraphV5/gen-cpp/: CreateTag.cpp  MetaService.cpp  MetaService.h  skvGraphV5_types.cpp  skvGraphV5_types.h
(+21 files in other folders)
